--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-   Hello world
+   Hello world - with js
     <script src="index.js"></script>
   </body>
 </html>
