--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>WebAppCourseProject</title>
+    <title>repl.it</title>
     <link href="index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-   Hello world - with js
+    <div id="map"></div>
     <script src="index.js"></script>
+    <script src="https://maps.google.com/maps/api/js?callback=init"></script>
   </body>
 </html>
