--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="map"></div>
     <script src="index.js"></script>
-    <script src="https://maps.google.com/maps/api/js?callback=init"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDk4D7miA5wN4ARr9l-d1p5r7geDlREIow&callback=initMap"></script>
   </body>
 </html>
