--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+	Thanks for a great time at Code Clan :-)
     <div id="map"></div>
     <script src="index.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDk4D7miA5wN4ARr9l-d1p5r7geDlREIow&callback=init"></script>
